@@ -2,7 +2,6 @@
     "chrome": {
         "default_headers": {
             "User-Agent": null,
-            "DNT": "1",
             "Accept": "text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8",
             "Accept-Language": "en-US,en;q=0.9",
             "Accept-Encoding": "gzip, deflate, br"
@@ -17,9 +16,13 @@
             "ECDHE-RSA-AES256-GCM-SHA384",
             "ECDHE-ECDSA-CHACHA20-POLY1305",
             "ECDHE-RSA-CHACHA20-POLY1305",
+            "ECDHE-RSA-AES128-SHA",
+            "ECDHE-RSA-AES256-SHA",
             "AES128-GCM-SHA256",
             "AES256-GCM-SHA384",
-            "AES128-SHA"
+            "AES128-SHA",
+            "AES256-SHA",
+            "DES-CBC3-SHA"
         ],
         "releases": {
             "Chrome/50.0.0.0": {
@@ -12807,8 +12810,7 @@
             "User-Agent": null,
             "Accept": "text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8",
             "Accept-Language": "en-US,en;q=0.5",
-            "Accept-Encoding": "gzip, deflate, br",
-            "DNT": "1"
+            "Accept-Encoding": "gzip, deflate, br"
         },
         "cipherSuite": [
             "TLS_AES_128_GCM_SHA256",
@@ -12822,9 +12824,13 @@
             "ECDHE-RSA-AES256-GCM-SHA384",
             "ECDHE-ECDSA-AES256-SHA",
             "ECDHE-ECDSA-AES128-SHA",
+            "ECDHE-RSA-AES128-SHA",
+            "ECDHE-RSA-AES256-SHA",
             "DHE-RSA-AES128-SHA",
             "DHE-RSA-AES256-SHA",
-            "AES128-SHA"
+            "AES128-SHA",
+            "AES256-SHA",
+            "DES-CBC3-SHA"
         ],
         "releases": {
             "Firefox/50.0": {
