@@ -1,3 +1,7 @@
+[B][COLOR gold]v2.2.5[/COLOR][/B]
+- Migration to the new AllDebrid API
+- More accuracy for movie trailers
+
 [B][COLOR gold]v2.2.4[/COLOR][/B]
 - Various under the hood changes
 
